--- a/app/src/main/res/layout/fragment_reel.xml
+++ b/app/src/main/res/layout/fragment_reel.xml
@@ -6,9 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.ReelFragment">
 
-
      <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/viewPager1"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
+
+     <ProgressBar
+         android:id="@+id/progressBar"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:visibility="gone" />
+
+     <TextView
+         android:id="@+id/emptyState"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:text="No reels found"
+         android:visibility="gone" />
+
 </FrameLayout>
