--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -64,12 +64,22 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageViewHeart"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="8dp"
-                android:contentDescription="Heart Icon"
-                android:src="@drawable/ic_like" />
+                android:id="@+id/like_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_like"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:padding="8dp"/>
+
+            <TextView
+                android:id="@+id/likes_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/like_button"
+                app:layout_constraintTop_toTopOf="@id/like_button"
+                android:text="0 likes"
+                android:padding="8dp"/>
 
             <ImageView
                 android:id="@+id/imageViewComment"
