--- a/app/src/main/res/layout/my_post_design_rv.xml
+++ b/app/src/main/res/layout/my_post_design_rv.xml
@@ -13,20 +13,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/profileImageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="Profile image" />
+<!--        <ImageView-->
+<!--            android:id="@+id/profileImageView"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:contentDescription="Profile image" />-->
 
-        <TextView
-            android:id="@+id/usernameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:id="@+id/usernameTextView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textStyle="bold" />-->
 
         <ImageView
             android:id="@+id/postImageView"
@@ -35,12 +35,12 @@
             android:layout_marginTop="8dp"
             android:contentDescription="Post Image" />
 
-        <TextView
-            android:id="@+id/captionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textSize="14sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/captionTextView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:textSize="14sp" />-->
     </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
