--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/like"
-        android:title="Like"
-        android:icon="@drawable/ic_like"
+        android:id="@+id/aboutUs"
+        android:title="AboutUs"
+        android:icon="@drawable/ic_error"
         app:showAsAction="always"
          />
     <item
