added like feature

--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -55,6 +55,7 @@
             android:id="@+id/sharetoPost"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_share"
+            android:backgroundTint="@color/background_color"
 
             />
 
