--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -135,6 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:id="@+id/googlesignIn"
             android:gravity="center"
             android:padding="4dp"
             android:text="@string/log_in_with_google"
@@ -163,3 +164,6 @@
         android:gravity="center_horizontal" />
 
 </RelativeLayout>
+
+
+
