--- a/app/src/main/res/layout/follow_rv.xml
+++ b/app/src/main/res/layout/follow_rv.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:orientation="vertical"
     android:layout_margin="10dp">
     <de.hdodenhof.circleimageview.CircleImageView
@@ -13,7 +13,9 @@
     <TextView
         android:id="@+id/story_user"
         android:layout_width="match_parent"
-        android:layout_height="15dp"/>
+        android:layout_height="15dp"
+        android:textColor="@color/black"
+        android:hint="ghsjhf"/>
 
 
 </LinearLayout>
