--- a/app/src/main/res/layout/fragment_my_reels.xml
+++ b/app/src/main/res/layout/fragment_my_reels.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.myReelsFragment">
+    tools:context=".fragment.myReelsFragment"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </FrameLayout>
