--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
+    app:cardElevation="1dp"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -88,6 +88,18 @@
                 android:layout_margin="8dp"
                 android:contentDescription="Comment Icon"
                 android:src="@drawable/ic_comment" />
+            <!-- Save Icon (added here) -->
+            <ImageView
+                android:id="@+id/imageViewSave"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="200dp"
+                android:layout_marginTop="8dp"
+                android:layout_gravity=""
+
+                android:layout_marginEnd="8dp"
+
+                android:src="@drawable/ic_save" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
