--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -21,13 +21,16 @@
             android:orientation="horizontal"
             android:gravity="center_vertical">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageViewProfile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="8dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_person" />
+                android:src="@drawable/ic_person"
+                app:civ_border_width="2dp"
+                 />
 
             <TextView
                 android:id="@+id/textViewUsername"
