--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <!-- Profile Image and Username -->
+        <!-- Profile Image, Username, Time, and 3-Dot Menu -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,24 +22,50 @@
             android:gravity="center_vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imageViewProfile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="8dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_person"
-                app:civ_border_width="2dp"
-                 />
+                app:civ_border_width="2dp" />
 
-            <TextView
-                android:id="@+id/textViewUsername"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="16dp">
+
+                <TextView
+                    android:id="@+id/textViewUsername"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Username"
+                    android:textStyle="bold"
+                    android:padding="4dp" />
+
+                <!-- Time TextView (below username) -->
+                <TextView
+                    android:id="@+id/textViewTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5 minutes ago"
+                    android:textSize="12sp"
+                    android:padding="4dp"
+                    android:textColor="@android:color/darker_gray" />
+            </LinearLayout>
+
+            <!-- 3-Dot Menu -->
+            <ImageView
+                android:id="@+id/imageViewMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:src="@drawable/ic_more_vert"
+                android:contentDescription="More options"
+                android:layout_marginEnd="8dp"
                 android:padding="8dp"
-                android:text="Username"
-                android:textStyle="bold" />
+                android:onClick="showPostMenu" />
         </LinearLayout>
 
         <!-- Post Image -->
@@ -49,8 +75,7 @@
             android:layout_height="300dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:scaleType="centerCrop"
-             />
+            android:scaleType="centerCrop" />
 
         <!-- Caption -->
         <TextView
@@ -60,49 +85,49 @@
             android:padding="8dp"
             android:text="Caption" />
 
-        <!-- Like and Comment Icons -->
+        <!-- Like, Comment, and Save Icons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/like_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_like"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:padding="8dp"/>
+                android:padding="8dp" />
 
             <TextView
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@id/like_button"
-                app:layout_constraintTop_toTopOf="@id/like_button"
                 android:text="0 likes"
-                android:padding="8dp"/>
+                android:padding="8dp" />
 
             <ImageView
                 android:id="@+id/imageViewComment"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
-                android:contentDescription="Comment Icon"
-                android:src="@drawable/ic_comment" />
-            <!-- Save Icon (added here) -->
+                android:src="@drawable/ic_comment"
+                android:contentDescription="Comment Icon" />
+
+            <!-- Spacer View to push Save Icon to the end -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <!-- Save Icon at the End -->
             <ImageView
-                android:id="@+id/imageViewSave"
-                android:layout_width="wrap_content"
+
+                android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginStart="200dp"
-                android:layout_marginTop="8dp"
-                android:layout_gravity=""
-
-                android:layout_marginEnd="8dp"
-
-                android:src="@drawable/ic_save" />
+                android:layout_margin="8dp"
+                android:src="@drawable/ic_save"
+                android:contentDescription="Save Icon" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
